appId: com.revenuecat.maestro.ios  

--- 

- tapOn: "Cancel Subscription"
- tapOn: "Too expensive"
- tapOn: "No, thanks"
- tapOn: ${SUBSCRIPTION_GROUP}
- tapOn: "Cancel Subscription"
- tapOn: "Confirm"
