appId: com.revenuecat.maestro.ios
name: Manage Subscriptions Restore Purchases

---
- launchApp
- runFlow: "../../utils/open_customer_center.yaml"
- tapOn: "Restore past purchases"
- assertVisible: "No past purchases"
- tapOn: "Dismiss"
- tapOn:
    id: "circled_close_button"