appId: com.revenuecat.maestro.ios
name: Accept Promo Offer with multiple subscriptions

onFlowComplete:
  - runFlow: 
        file: ../../utils/cancel_subscription_group.yaml
        env:
            SUBSCRIPTION_GROUP: "subscription.group.1"
  - waitForAnimationToEnd:
      timeout: 5000
  - runFlow: 
        file: ../../utils/cancel_subscription_group.yaml
        env:
            SUBSCRIPTION_GROUP: "subscription.group.2"
---
- launchApp
- runFlow: 
    file: "../../utils/buy_product.yaml"
    env:
        PRODUCT_ID: "maestro.weekly.tests.01"
- runFlow: 
    file: "../../utils/buy_product.yaml"
    env:
        PRODUCT_ID: "maestro.weekly2.tests.01"
- runFlow: "../../utils/open_customer_center.yaml"
- tapOn: Product 1 [Weekly]
- runFlow: "../../utils/promo_offer_accept.yaml"
- tapOn: How can we help? # goes back
- tapOn:
    id: "circled_close_button"
