appId: com.revenuecat.maestro.ios

---
- tapOn: "Manage subscriptions"
- tapOn: "Cancel Subscription"
- tapOn: "Confirm"
