appId: com.revenuecat.maestro.ios  

--- 

- tapOn: "Cancel Subscription"
- tapOn: "Too expensive"
- tapOn:
    id: "promo-offer-primary-button"
- tapOn: Subscribe
- tapOn: \b[Oo][Kk]\b

