appId: com.revenuecat.maestro.ios  

--- 

- tapOn: "Cancel Subscription"
- tapOn: "Too expensive"
- tapOn: "No, thanks"
- tapOn: "Cancel Subscription"

- runFlow:
    when:
      visible: 'Confirm'
    commands:
        - tapOn: 'Confirm'
- runFlow: # iOS 26 does not detect Confirm
    when:
      notVisible: 'Confirm'
    commands:
        - tapOn: 
            point: 70%,58%

- runFlow:
    when:
      visible: 'Cancel'
    commands:
        - tapOn: 'Cancel'
- runFlow: # iOS 26 does not detect Cancel
    when:
      notVisible: 'Cancel'
    commands:
        - tapOn: 
            point: 87%,12%

- assertNotVisible: "Cancel Subscription"
